@@ -65,7 +65,6 @@
 =app-text/kbarcode-2.0.7
 =app-text/kchmviewer-3.1_p2-r1
 =app-text/kding-0.4.3
-=app-text/poppler-0.14.4
 =app-text/poppler-0.14.5
 =app-text/poppler-0.16.3
 =dev-db/hk_classes-0.8.3
