@@ -1,8 +1,6 @@
-DIST poppler-0.14.4.tar.gz 1794096 RMD160 505ac4c3759a7d4b14c1d077f9249f317dc2d2af SHA1 c51931d7229126c16da54b72bfe63a190c2b5160 SHA256 97c394144802e733eaec2682e06bddc4939c71ede58df045127aa94bd244c713
 DIST poppler-0.14.5.tar.gz 1798194 RMD160 80d4441912b02d89777405ce03f8e175c4ccfa9e SHA1 e23b115e4ebc06c937318688b06a7c6b3319a00a SHA256 c805317c4c1a7080098ae8c7c2a1c1b8e2c784858fc2e04941878eeb8164814c
 DIST poppler-0.16.3.tar.gz 1948009 RMD160 fa32924ef23f0eb9e134f8d98ae35ecf2cbf29df SHA1 0da87a1c3dc11a2c1e31c5c6603d5479545354bb SHA256 23d1fee6c5c91fe488d2c49c5da9938c751c41dc9f87f407d1ce9e38304505d1
-EBUILD poppler-0.14.4.ebuild 2684 RMD160 463b1d3e3b3bc933171e9fe362268c577c58eebe SHA1 0ce7561ed4f7451fdba2fb106aa8959abd258c5c SHA256 e39543ad9ae683e0a25e8c289a57677b16bfb630f468f8216c4eae1061f3f6d1
 EBUILD poppler-0.14.5.ebuild 2685 RMD160 51c3f6041b9b4cc14b8bb1719559481e42828871 SHA1 f8211112e0c7a84b16d2bafad956d98da55f5491 SHA256 d8eea4579c4c7558bd3805c51f1bd9f242700a8832dac10123435aead1dcfdf6
 EBUILD poppler-0.16.3.ebuild 2871 RMD160 3c4ca8089a702eb64a0c2aaca74df2c7d7a2208d SHA1 0b5329738eaac6ef112bf093d978fc0c5063cf97 SHA256 08fd673ad01505d56fc618c922eb379d49480f51a49c659797a58471b1d16373
-MISC ChangeLog 39638 RMD160 fe5b32e9291d0ee85a424f264b76b2e0bc738ce2 SHA1 64253f3461469d633fb137c88c864afc0b66b8e5 SHA256 7d7df5fe358fdfb8676519cf985b8a50cf2ab64c36caedb6f33a729898a8a7ed
+MISC ChangeLog 39733 RMD160 d142f940f1f54892516a58012641858cacdee09f SHA1 ac17ce78f1eeeba7ffd097cfc059f2221a095558 SHA256 aeb85d59afff4fc762c0abfdc5ea7b75392447c00622bf7309d169c283d56594
 MISC metadata.xml 655 RMD160 a03607c3809e0ceeaecf8c72950a88e242323ebe SHA1 1a02720d525df969c8f30b9587fb0da845817ba5 SHA256 2963931ac0f87f5e878bf7e6f983b393a2a9da2178b9b84e97444a85d27bc95d
