@@ -1,6 +1,10 @@
 # ChangeLog for app-text/poppler
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.280 2011/02/28 18:54:52 reavertm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.281 2011/04/03 18:27:45 dilfridge Exp $
+
+  03 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
+  -poppler-0.14.4.ebuild:
+  Cleanup
 
 *poppler-0.16.3 (28 Feb 2011)
 
